--- a/src/server/scripts/Custom/CMakeLists.txt
+++ b/src/server/scripts/Custom/CMakeLists.txt
@@ -11,6 +11,7 @@
 set(scripts_STAT_SRCS
   ${scripts_STAT_SRCS}
     Custom/custom_fixes.cpp
+    Custom/hyd_lottery.cpp
 )
 
 message("  -> Prepared: Custom")
